autogenerate clients
