# libs/autogen-clients/src/autogen/types/CreateFuncionarioDto.ts
@@ -1,0 +1,45 @@
+/**
+ * Generated by Kubb (https://kubb.dev/).
+ * Do not edit manually.
+ */
+
+export type CreateFuncionarioDto = {
+  /**
+   * @minLength 1
+   * @maxLength 100
+   * @type string | undefined
+   */
+  nome?: string;
+  /**
+   * @minLength 0
+   * @maxLength 100
+   * @type string | undefined
+   */
+  social?: string;
+  /**
+   * @minLength 1
+   * @maxLength 15
+   * @type string
+   */
+  cpf: string;
+  /**
+   * @type string | undefined
+   */
+  nascimento?: string;
+  /**
+   * @minLength 0
+   * @maxLength 20
+   * @type string | undefined
+   */
+  phone?: string;
+  /**
+   * @type string, email
+   */
+  email: string;
+  /**
+   * @minLength 0
+   * @maxLength 11
+   * @type string | undefined
+   */
+  rg?: string;
+};
