# libs/autogen-clients/src/autogen/types/GetFuncionarioResponseDto.ts
@@ -1,0 +1,18 @@
+/**
+ * Generated by Kubb (https://kubb.dev/).
+ * Do not edit manually.
+ */
+
+import type { CadastroDto } from './CadastroDto.ts';
+import type { FuncionarioDto } from './FuncionarioDto.ts';
+
+export type GetFuncionarioResponseDto = {
+  /**
+   * @type object
+   */
+  funcionario: FuncionarioDto;
+  /**
+   * @type object
+   */
+  cadastro: CadastroDto;
+};
