# libs/autogen-clients/src/autogen/types/PessoasJuridicasControllerCreate.ts
@@ -1,20 +1,0 @@
-/**
- * Generated by Kubb (https://kubb.dev/).
- * Do not edit manually.
- */
-
-import type { CreatePessoaJuridicaDto } from './CreatePessoaJuridicaDto.ts';
-
-export type PessoasJuridicasControllerCreate201 = any;
-
-export type PessoasJuridicasControllerCreateMutationRequest =
-  CreatePessoaJuridicaDto;
-
-export type PessoasJuridicasControllerCreateMutationResponse =
-  PessoasJuridicasControllerCreate201;
-
-export type PessoasJuridicasControllerCreateMutation = {
-  Response: PessoasJuridicasControllerCreate201;
-  Request: PessoasJuridicasControllerCreateMutationRequest;
-  Errors: any;
-};
