# libs/autogen-clients/src/autogen/types/index.ts
@@ -1,40 +1,40 @@
-export type { CreatePessoaJuridicaDto } from './CreatePessoaJuridicaDto.ts';
+export type { CadastroDto } from './CadastroDto.ts';
+export type { CreateFuncionarioDto } from './CreateFuncionarioDto.ts';
+export type { FuncionarioDto } from './FuncionarioDto.ts';
+export type {
+  FuncionariosControllerCreate201,
+  FuncionariosControllerCreateMutationRequest,
+  FuncionariosControllerCreateMutationResponse,
+  FuncionariosControllerCreateMutation,
+} from './FuncionariosControllerCreate.ts';
+export type {
+  FuncionariosControllerFindAll200,
+  FuncionariosControllerFindAllQueryResponse,
+  FuncionariosControllerFindAllQuery,
+} from './FuncionariosControllerFindAll.ts';
+export type {
+  FuncionariosControllerFindOnePathParams,
+  FuncionariosControllerFindOne200,
+  FuncionariosControllerFindOneQueryResponse,
+  FuncionariosControllerFindOneQuery,
+} from './FuncionariosControllerFindOne.ts';
+export type {
+  FuncionariosControllerRemovePathParams,
+  FuncionariosControllerRemove200,
+  FuncionariosControllerRemoveMutationResponse,
+  FuncionariosControllerRemoveMutation,
+} from './FuncionariosControllerRemove.ts';
+export type {
+  FuncionariosControllerUpdatePathParams,
+  FuncionariosControllerUpdate200,
+  FuncionariosControllerUpdateMutationRequest,
+  FuncionariosControllerUpdateMutationResponse,
+  FuncionariosControllerUpdateMutation,
+} from './FuncionariosControllerUpdate.ts';
+export type { GetFuncionarioResponseDto } from './GetFuncionarioResponseDto.ts';
 export type {
   HealthControllerGetHealth200,
   HealthControllerGetHealthQueryResponse,
   HealthControllerGetHealthQuery,
 } from './HealthControllerGetHealth.ts';
-export type {
-  PessoasJuridicasControllerCreate201,
-  PessoasJuridicasControllerCreateMutationRequest,
-  PessoasJuridicasControllerCreateMutationResponse,
-  PessoasJuridicasControllerCreateMutation,
-} from './PessoasJuridicasControllerCreate.ts';
-export type {
-  PessoasJuridicasControllerFindAllQueryParams,
-  PessoasJuridicasControllerFindAll200,
-  PessoasJuridicasControllerFindAllQueryResponse,
-  PessoasJuridicasControllerFindAllQuery,
-} from './PessoasJuridicasControllerFindAll.ts';
-export type {
-  PessoasJuridicasControllerFindOnePathParams,
-  PessoasJuridicasControllerFindOneQueryParams,
-  PessoasJuridicasControllerFindOne200,
-  PessoasJuridicasControllerFindOneQueryResponse,
-  PessoasJuridicasControllerFindOneQuery,
-} from './PessoasJuridicasControllerFindOne.ts';
-export type {
-  PessoasJuridicasControllerRemovePathParams,
-  PessoasJuridicasControllerRemoveQueryParams,
-  PessoasJuridicasControllerRemove200,
-  PessoasJuridicasControllerRemoveMutationResponse,
-  PessoasJuridicasControllerRemoveMutation,
-} from './PessoasJuridicasControllerRemove.ts';
-export type {
-  PessoasJuridicasControllerUpdatePathParams,
-  PessoasJuridicasControllerUpdate200,
-  PessoasJuridicasControllerUpdateMutationRequest,
-  PessoasJuridicasControllerUpdateMutationResponse,
-  PessoasJuridicasControllerUpdateMutation,
-} from './PessoasJuridicasControllerUpdate.ts';
-export type { UpdatePessoaJuridicaDto } from './UpdatePessoaJuridicaDto.ts';
+export type { UpdateFuncionarioDto } from './UpdateFuncionarioDto.ts';
