# libs/autogen-clients/src/autogen/zod/createFuncionarioDtoSchema.ts
@@ -1,0 +1,16 @@
+/**
+ * Generated by Kubb (https://kubb.dev/).
+ * Do not edit manually.
+ */
+
+import { z } from 'zod/v4';
+
+export const createFuncionarioDtoSchema = z.object({
+  nome: z.optional(z.string().min(1).max(100)),
+  social: z.optional(z.string().min(0).max(100)),
+  cpf: z.string().min(1).max(15),
+  nascimento: z.optional(z.string()),
+  phone: z.optional(z.string().min(0).max(20)),
+  email: z.email(),
+  rg: z.optional(z.string().min(0).max(11)),
+});
