# libs/autogen-clients/src/autogen/zod/getFuncionarioResponseDtoSchema.ts
@@ -1,0 +1,17 @@
+/**
+ * Generated by Kubb (https://kubb.dev/).
+ * Do not edit manually.
+ */
+
+import { cadastroDtoSchema } from './cadastroDtoSchema.ts';
+import { funcionarioDtoSchema } from './funcionarioDtoSchema.ts';
+import { z } from 'zod/v4';
+
+export const getFuncionarioResponseDtoSchema = z.object({
+  get funcionario() {
+    return funcionarioDtoSchema;
+  },
+  get cadastro() {
+    return cadastroDtoSchema;
+  },
+});
